# pioneer3at_simulation

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  nvidia-docker-compose.yml  package.xml  requirements.txt  setup.py
catkin_ws_src/pioneer3at_simulation/: CMakeLists.txt  package.xml
catkin_ws_src/pioneer3at_simulation/include/pioneer3at_simulation/: GazeboRosPioneer3ATContacts.h
catkin_ws_src/pioneer3at_simulation/launch/core/: gazebo_simple.launch
catkin_ws_src/pioneer3at_simulation/launch/worlds/: colorised.world
catkin_ws_src/pioneer3at_simulation/models/color_plane_bw/: model.config
catkin_ws_src/pioneer3at_simulation/msg/: ContactState.msg  Power.msg
catkin_ws_src/pioneer3at_simulation/scripts/: teleop_joy
catkin_ws_src/pioneer3at_simulation/src/: gazebo_ros_skid_steer_drive_pioneer3at.cpp
catkin_ws_src/pioneer3at_simulation/urdf/: pioneer3at.urdf.xacro
config/: rqt_gui_cameras.perspective
docker/: Dockerfile
launch/control/: ps3joy.launch
launch/core/: gazebo.launch  gazebo_simple.launch  world.launch
launch/worlds/: color_plane_bw.world
models/color_plane/: model.config  model.sdf
models/color_plane/materials/scripts/: color_plane.material
models/color_plane_bw/: model.sdf
models/color_plane_bw/materials/scripts/: color_plane_bw.material
scripts/: generate_texture  generate_texture.py  teleop_joy
src/: GazeboRosPioneer3ATContacts.cpp  gazebo_ros_skid_steer_drive_pioneer3at.cpp
urdf/: pioneer3at.urdf.xacro
