<?xml version="1.0"?>
<package>
  <name>pioneer3at_simulation</name>
  <version>0.1.0</version>
  <description>Pioneer 3AT simulation with additional sensors.</description>
  <maintainer email="email@mail.com">R. Omar Chavez-Garcia</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>ps3joy</run_depend>
  

</package>
